[build-system]
requires = ["setuptools >= 70.1", "pip >= 24.1", "wheel >= 0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "lancedb-snippets"
version = "0.1.0"
description = "A snippet management system using LanceDB"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Mrigank Kumar", email = "mkpro118@gmail.com"},
]
dependencies = [
    "lancedb",
    "numpy",
    "pandas",
    "sentence_transformers",
    "tantivy",
    "Wikipedia-API",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
allow_redefinition = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_incomplete_defs = true
disallow_untyped_defs = false
disallow_untyped_decorators = true
ignore_missing_imports = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
